[gd_scene load_steps=4 format=3 uid="uid://bvf27x350klb5"]

[ext_resource type="Script" uid="uid://bdxesi5altslk" path="res://scenes/medicine_handler/medicine_handler.gd" id="1_hvk4v"]
[ext_resource type="Script" uid="uid://bfmsfj6ngyru8" path="res://scenes/medicine_handler/medicine_control.gd" id="2_hwl0t"]
[ext_resource type="PackedScene" uid="uid://b5x60ougcm4yn" path="res://scenes/medicine_handler/medicine_ui.tscn" id="3_j0yse"]

[node name="MedicineHandler" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hvk4v")

[node name="MedicinesControl" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(240, 0)
layout_mode = 0
offset_right = 240.0
offset_bottom = 80.0
mouse_filter = 2
theme_override_constants/separation = 80
script = ExtResource("2_hwl0t")

[node name="MedicineUI" parent="MedicinesControl" instance=ExtResource("3_j0yse")]
layout_mode = 2

[node name="MedicineUI2" parent="MedicinesControl" instance=ExtResource("3_j0yse")]
layout_mode = 2

[node name="MedicineUI3" parent="MedicinesControl" instance=ExtResource("3_j0yse")]
layout_mode = 2
